* (bug 27864) Transcluding {{Special:Prefix}} with empty prefix now lists all
  pages.
* (bug 18803) JPEG2000 images can no longer be uploaded as JPEG image.
* (bug 11868) If using links to count articles, the checking will now be based
  on the real presence of an internal link instead of the "[[" string
* (bug 28287) The "your changes" box for edit conflicts is now read-only.

=== API changes in 1.19 ===
* (bug 27790) add query type for querymodules to action=paraminfo
* (bug 28963) add langbacklinks module to api

=== Languages updated in 1.19 ===

MediaWiki supports over 330 languages. Many localisations are updated
regularly. Below only new and removed languages are listed, as well as
changes to languages because of Bugzilla reports.

* Bhojpuri (bho) (renamed from "bh").

== Compatibility ==

MediaWiki 1.19 requires PHP 5.2.3. PHP 4 is no longer supported.

MySQL is the recommended DBMS. PostgreSQL or SQLite can also be used, but 
support for them is somewhat less mature. There is experimental support for IBM
DB2, Oracle and Microsoft SQL Server.

The supported versions are:

* MySQL 4.0 or later
* PostgreSQL 8.3 or later
* SQLite 3

== Upgrading ==

1.19 has several database changes since 1.17, and will not work without schema
updates.

If upgrading from before 1.11, and you are using a wiki as a commons 
repository, make sure that it is updated as well. Otherwise, errors may arise 
due to database schema changes.

If upgrading from before 1.7, you may want to run refreshLinks.php to ensure
new database fields are filled with data.

If you are upgrading from MediaWiki 1.4.x or earlier, some major database
changes are made, and there is a slightly higher chance that things could
break. Don't forget to always back up your database before upgrading!

See the file UPGRADE for more detailed upgrade instructions.

For notes on 1.15.x and older releases, see HISTORY.

== Online documentation ==
